# retail-investor-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  threat_model.md
.agents/: CONTEXT.md
app/: __init__.py  adk_app.py  agent.py  agent_runtime.py  agent_tools.py  assemble.py  contracts.py  function_tools.py  llm_client.py  mcp_server.py  memory.py  memory_service.py  models.py  personalize.py  query.py  security.py  settings.py  store.py  tool_summary.py  turn_capture.py
app/data/: glossary.json  market_map.json  news_seed.json
app/fixtures/: response_overlap.json  tool_fee_drag.json  tool_forensic.json  tool_glossary.json  tool_landing.json  tool_overlap.json  tool_ticker_card.json
app/tools/: __init__.py  calculators.py  forensic.py  forensic_scores.py  glossary.py  overlap.py  ticker_card.py
docs/: ARCHITECTURE.md  PRODUCT.md  VIDEO_SCRIPT.md
eval/: evalset.json  run_eval.py
frontend/: index.html  package.json
scripts/: prefetch_ticker_cards.py
server/: main.py
tests/: conftest.py  test_agent_runtime.py  test_agent_session.py  test_agent_tools.py  test_assemble.py  test_contracts.py  test_eval_set.py  test_forensic_scores.py  test_function_tools.py  test_llm_client.py  test_mcp_server.py  test_memory.py  test_models.py  test_personalize.py  test_project_artifacts.py  test_query.py  test_security.py  test_server.py  test_store.py  test_tool_summary.py  test_tools_calculators.py  test_tools_forensic.py  test_tools_glossary.py  test_tools_overlap.py  test_tools_ticker_card.py
(+78 files in other folders)
